fixing white space on mobile nav

--- a/week 9/product-landing-page/styles.css
+++ b/week 9/product-landing-page/styles.css
@@ -557,7 +557,7 @@ footer p {
     }
 
         body {
-        padding-top: 80px;
+        padding-top: 60px;
     }
     
           
